fix for favourite quote alignment

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ button, input {
   font-family: sans-serif;
 }
 
+ul, li {
+  margin: 0;
+  padding: 0;
+}
+
 *:focus { 
   outline: none; 
 }
